--- a/style.css
+++ b/style.css
@@ -136,14 +136,55 @@ img {
 
 }
 
-.myProjects {
+.recentProjects {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-evenly;
+    padding-top: 50px;
+    flex-wrap: wrap;
+    gap: 50px;
+
 }
+
+
 
 .proj {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    flex-direction: column;
+    padding-top: 50px;
+    align-items: center;
+    justify-content: center;
+    margin-right: 70px;
+    font-family: "Courier New" ,serif;
+    font-size: 20px;
+    width: 1300px;
+    /*border: 5px ridge #2a1c36;*/
+    height: 80px;
+    transition: height 1s ease 0s;
+    border-radius: 10px 0px 40px 0px;
+    box-shadow: 25px 19px 22px 10px rgba(217,207,237,0.72);
+    -webkit-box-shadow: 25px 19px 22px 10px rgba(217,207,237,0.72);
+    -moz-box-shadow: 25px 19px 22px 10px rgba(217,207,237,0.72);
+    overflow: hidden;
 }
+
+.proj:hover {
+    height: 600px;
+}
+
+.proj:hover img {
+    transform: scale(1.1); /* Slightly enlarge image on hover */
+}
+
+.proj img {
+    display: flex;
+    margin-left: 200px;
+    margin-top: 50px;
+    margin-right: 50px;
+    width: 100%; /* Ensure image scales with container */
+    height: auto; /* Maintain aspect ratio */
+    transition: transform 1s ease 0s; /* Smoothly transition the size of */
+}
+
+
