--- a/style.css
+++ b/style.css
@@ -152,11 +152,12 @@ img {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    padding-top: 50px;
+    padding-top: 70px;
     align-items: center;
     justify-content: center;
     margin-right: 70px;
     font-family: "Courier New" ,serif;
+    font-weight: bold;
     font-size: 20px;
     width: 1300px;
     /*border: 5px ridge #2a1c36;*/
