--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 
  }
 
- .mailmeLink {
+ .mailmeLink.contactform {
      font-size: 20px;
      font-family: "Courier New" ,serif;
      color: white;
@@ -191,16 +191,16 @@ img {
 @media screen and (max-width: 640px) {
     /*min-width will apply this css to desktop devices(large screen) bigger then 600 it will apply the css*/
     /*max-width will apply to small screen (mobile) the value 600px it will change under it*/
-    html {
-        width: 640px;
-    }
+    /*html {*/
+    /*    width: 640px;*/
+    /*}*/
 
-    section {
-        width: 640px;
-    }
-    * {
-        box-sizing: border-box;
-    }
+    /*section {*/
+    /*    width: 640px;*/
+    /*}*/
+    /** {*/
+    /*    box-sizing: border-box;*/
+    /*}*/
 
 
     header {
@@ -221,7 +221,7 @@ img {
     }
 
     .jobdescription {
-        font-size: 20px;
+        font-size: 10px;
         font-family: "Courier New", serif;
         font-weight: bold;
         text-shadow: 10px 10px 10px black;
