--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ img {
         background-image: url("header.gif");
         background-size: cover;
         height: 350px;
-        width: 100vh;
+        width: 100vw;
         color: white;
         padding: 4rem;
         font-family: sans-serif;
@@ -221,7 +221,7 @@ img {
     }
 
     .jobdescription {
-        font-size: 10px;
+        font-size: 20px;
         font-family: "Courier New", serif;
         font-weight: bold;
         text-shadow: 10px 10px 10px black;
