--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 
  }
 
- .mailmeLink.contactform {
+ .mailmeLink {
      font-size: 20px;
      font-family: "Courier New" ,serif;
      color: white;
@@ -198,9 +198,9 @@ img {
     /*section {*/
     /*    width: 640px;*/
     /*}*/
-    /** {*/
-    /*    box-sizing: border-box;*/
-    /*}*/
+    * {
+        box-sizing: border-box;
+    }
 
 
     header {
@@ -221,7 +221,7 @@ img {
     }
 
     .jobdescription {
-        font-size: 20px;
+        font-size: 15px;
         font-family: "Courier New", serif;
         font-weight: bold;
         text-shadow: 10px 10px 10px black;
@@ -231,20 +231,22 @@ img {
     nav {
         display: flex;
         flex-direction: row;
-        justify-content: center;
-        /*padding: 15px 550px 12px;*/
+        justify-content: right;
         font-family: "Courier New", sans-serif;
         height: 80px;
         font-size: 15px;
+        margin-left: 40px;
     }
 
     nav .navbar2 {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        gap: 45px;
+        gap: 20px;
         align-content: space-around;
-        padding-left: 2rem;
+        /*padding-left: 15rem;*/
+
+
     }
 
     .haboutme {
