--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
-
 * {
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
-    margin: 0;
     background-color: black;
 }
 
- nav {
+nav {
      display: flex;
      justify-content: space-between;
      padding: 15px 300px 12px;
@@ -16,85 +18,80 @@ body {
      font-family: "Courier New" ,sans-serif;
      height: 80px;
      font-size: 15px;
- }
+}
 
- a {
+.navbarLogo img {
+     height: 200px;
+     width: 100px;
+}
+
+a {
      text-decoration: none;
      color: white;
+}
 
- }
-
-
-
- a:hover {
+a:hover {
      text-decoration: underline;
- }
+}
 
- .navRight {
+.navbar a {
      font-size: larger;
      font-weight: bold;
-     padding-right: 5px;
+     padding-right: 40px;
      color: white;
- }
+}
 
- .name {
+.name {
      color: white;
- }
+}
 
- header {
+header {
      background-image: url("header.gif");
      background-size: contain;
      height: 700px;
      color: white;
-     padding: 200px;
-     font-family: sans-serif;
- }
+     padding: 180px;
+}
 
- .headerTitle {
+.headerTitle {
      font-size: 80px;
      font-family: "Courier New", serif ;
      text-shadow: 5px 1px 5px black;
- }
+     padding-left: 115px;
+}
 
- .jobdescription {
+.headerParagraph {
      font-size: xx-large;
      font-family: "Courier New" ,serif;
      font-weight: bold;
-     text-shadow: 10px  10px 10px black;
+     text-shadow: 10px 10px 10px black;
+     padding-left: 118px;
+}
 
- }
-
- .mailmeLink {
+.mailMeLink {
      font-size: 20px;
      font-family: "Courier New" ,serif;
      color: white;
      font-weight: bold;
- }
+     padding-left: 118px;
+}
 
- .contactform {
+.gitlink {
      font-size: 20px;
      font-family: "Courier New" ,serif;
      color: white;
      font-weight: bold;
- }
+}
 
- .gitlink {
-     font-size: 20px;
-     font-family: "Courier New" ,serif;
-     color: white;
-     font-weight: bold;
- }
-
- .gtkm {
+.gtkm {
      font-size: 20px;
      font-family: "Courier New" ,serif;
      font-weight: bold;
      color: white;
-     margin-left: 1rem; <!-- space between Mail me and Get to know me -->
- }
+     margin-left: 1rem;
+}
 
 section {
-
     background-position: center;
     background-size: cover;
     height: 600px;
@@ -102,52 +99,48 @@ section {
     color: white;
 }
 
-.aboutME {
+.aboutMeFlexContainer {
     color: white;
     padding-bottom: 20%;
-
-
 }
 
-.haboutme {
+.headerAboutMeFlexContainer {
     font-size: 50px;
-    padding-top: 1rem;
+    padding-top: 3rem;
     font-family: "Courier New" ,serif;
     text-align: center;
     font-weight: bold;
     margin: 0 auto;
-
 }
 
-img {
+.profilepic {
     width: 400px;
     border-radius: 40%;
     padding-bottom: 50px;
-
 }
 
 .flexContainer {
+    font-size: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
     padding-bottom: 100px;
-
 }
 
-.paboutme {
+.paragraphAboutMe {
     font-family: "Courier New" ,serif;
     font-size: 20px;
     font-weight: bold;
+    padding-right: 10px;
 }
 
-.rprojh2 {
+.recentProjectsHeader {
     font-size: 50px;
-    padding-top: 1rem;
+    padding-top: 3rem;
     font-family: "Courier New" ,serif;
     text-align: center;
     font-weight: bold;
     margin: 0 auto;
-
 }
 
 .recentProjects {
@@ -157,24 +150,21 @@ img {
     padding-top: 50px;
     flex-wrap: wrap;
     gap: 50px;
-
 }
 
-
-
-.proj {
+.projects {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     padding-top: 70px;
+    padding-right: 40px;
     align-items: center;
     justify-content: center;
     margin-right: 70px;
     font-family: "Courier New" ,serif;
     font-weight: bold;
     font-size: 20px;
-    width: 1300px;
-    /*border: 5px ridge #2a1c36;*/
+    width: 1350px;
     height: 80px;
     transition: height 1s ease 0s;
     border-radius: 10px 0px 40px 0px;
@@ -184,15 +174,15 @@ img {
     overflow: hidden;
 }
 
-.proj:hover {
+.projects:hover {
     height: 600px;
 }
 
-.proj:hover img {
+.projects:hover img {
     transform: scale(1.1); /* Slightly enlarge image on hover */
 }
 
-.proj img {
+.projects img {
     display: flex;
     margin-left: 200px;
     margin-top: 50px;
@@ -202,116 +192,149 @@ img {
     transition: transform 1s ease 0s; /* Smoothly transition the size of */
 }
 
-.contactme {
+footer {
+    color: white;
+    margin-top: 150px;
+    display: flex;
     flex-wrap: wrap;
+    border-top: 5px ridge #8E799A;
+    border-radius: 11px 11px 0px 0px;
+}
+
+.contactme {
     display: flex;
     justify-content: center;
-    padding-top: 100px;
+}
+
+.contactMeHeader {
+    font-size: 20px;
+    font-family: "Courier New" ,sans-serif;
+    display: flex;
+    justify-content: left;
+    padding-left: 317px;
+}
+
+footer p {
+    width: 90%;
+    font-family: "Courier New" ,sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    padding-left: 317px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.returnTop {
+    margin-bottom: 1px;
+    font-size: 50px;
+    display: flex;
+    justify-content: right;
+    flex-wrap: wrap;
+    padding-right: 315px;
+}
+
+.copyright {
+    height: auto;
+}
+
+.copyright p {
+    font-size: 20px;
+    font-weight: lighter;
+    padding-top: 3rem;
+}
+
+.contactform {
+    font-size: 20px;
+    font-family: "Courier New" ,serif;
+    color: white;
+    font-weight: bold;
 }
 
 @media screen and (max-width: 640px) {
-    /*min-width will apply this css to desktop devices(large screen) bigger then 600 it will apply the css*/
-    /*max-width will apply to small screen (mobile) the value 600px it will change under it*/
-    /*html {*/
-    /*    width: 640px;*/
-    /*}*/
 
-    /*section {*/
-    /*    width: 640px;*/
-    /*}*/
     * {
         box-sizing: border-box;
     }
-
 
     header {
         background-image: url("header.gif");
         background-size: cover;
         height: 350px;
-        width: 100vw;
-        color: white;
         padding: 4rem;
-        font-family: sans-serif;
-
     }
 
     .headerTitle {
         font-size: 40px;
-        font-family: "Courier New", serif;
-        text-shadow: 5px 1px 5px black;
+        padding-left: 3px;
     }
 
-    .jobdescription {
+    .headerParagraph {
         font-size: 15px;
-        font-family: "Courier New", serif;
-        font-weight: bold;
-        text-shadow: 10px 10px 10px black;
+        padding-left: 2px;
+    }
 
+    .mailMeLink {
+        padding-left: 2px;
     }
 
     nav {
-        display: flex;
-        flex-direction: row;
-        justify-content: right;
-        font-family: "Courier New", sans-serif;
-        height: 80px;
-        font-size: 15px;
-        margin-left: 40px;
+        padding-left: 10px;
     }
 
-    nav .navbar2 {
+    .navbar {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        gap: 20px;
-        align-content: space-around;
-        /*padding-left: 15rem;*/
-
-
+        margin-left: 20px;
     }
 
-    .haboutme {
-        font-size: 40px;
+    .navbar a {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        font-size: 10px;
+    }
+
+    .navbarLogo img {
+        height: 150px;
+        width: 80px;
+    }
+
+    .headerAboutMeFlexContainer {
+        font-size: 30px;
         padding-top: 1rem;
-        font-family: "Courier New", serif;
         text-align: center;
         font-weight: bold;
     }
 
-    img {
-        display: flex;
-        justify-content: center;
+    .profilepic {
         height: 200px;
         width: 130px;
         border-radius: 40%;
-
     }
 
     .flexContainer {
+        font-size: 20px;
         flex-direction: row;
         flex-wrap: wrap;
-        padding-left: 20px; /* Adjust padding as needed for mobile */
-        padding-bottom: 20px; /* Adjust padding as needed for mobile */
-        justify-content: center; /* Adjust alignment as needed */
+        padding-left: 20px;
+        padding-bottom: 20px;
+        justify-content: center;
     }
 
-    .paboutme {
-        font-size: 20px; /* Adjust font size as needed for mobile */
-        padding: 10px; /* Add padding if needed */
+    .paragraphAboutMe {
+        font-size: 20px;
+        padding: 10px;
     }
 
-    .proj {
-        display: flex;
-        flex-wrap: wrap;
+    .recentProjectsHeader {
+        font-size: 30px;
+    }
+
+    .projects {
         flex-direction: column;
         padding-top: 90px;
         padding-bottom: 5rem;
-        margin-left: 1rem;
-        align-items: center;
-        justify-content: center;
-        font-family: "Courier New", serif;
-        font-weight: bold;
-        font-size: 20px;
+        padding-left: 3px;
         width: 100vw;
         height: 1px;
         transition: height 1s ease 0s;
@@ -321,7 +344,21 @@ img {
         -moz-box-shadow: 25px 19px 22px 10px rgba(217, 207, 237, 0.72);
         overflow: hidden;
     }
+
+    footer {
+        margin-top: 440px;
+        width: 375px;
+    }
+
+    .contactMeHeader {
+        padding-left: 95px;
+    }
+
+    footer p {
+        padding-left: 3px;
+    }
+
+    .returnTop {
+        padding-right: 19px;
+    }
 }
-
-
-
