--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ section {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    padding-top: 50px;
+    padding-top: 2rem;
     flex-wrap: wrap;
     gap: 50px;
 }
